# aiodnsresolver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aiodnsresolver.py  pyproject.toml  requirements_lint.in  requirements_lint.txt  requirements_test.in  requirements_test.txt  setup.py  test.py
.circleci/: config.yml
.github/workflows/: deploy-package-to-pypi.yml  test.yml
